[project]
name = "llm-text-probe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "freetype-py>=2.5.1",
    "llama-cpp-python>=0.3.8",
    "numpy>=2.2.4",
    "pillow>=11.2.1",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
]
